fix: remove static main function; clean code